# DragonEditor

./: .gitignore  CMakeLists.txt  DragonEditor.qrc  MainWindow.cpp  MainWindow.h  README.md  SettingsDialog.cpp  SettingsDialog.h  conanfile.txt  main.cpp  mainwindow.ui  settings.ui
src/: CMakeLists.txt  DragonData.cpp  DragonData.h  DragonDataTest.cpp  DragonData_gtest.cpp  DragonGame.cpp  DragonGame.h
